# ue-official-mcp

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
cache/: probe.json
probes/: 5.8.0.json
project/: UeMcpProbe.uproject
project/Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini
scripts/: bench_schema.py  toolset_map.yaml
scripts/ue_mcp_skills/: __init__.py  __main__.py  cli.py  generate.py  launch.py  paths.py  probe.py
skill/: SKILL.md
skill/references/: index.md  official-animation-sequencer.md  official-blueprint.md  official-data-tables.md  official-editor-automation.md  official-gas.md  official-material.md  official-mesh-geometry.md  official-niagara.md  official-project-misc.md  official-scene-actor.md  official-ui-state.md  official-uncategorized.md
skill/references/toolsets/: editor_toolset.toolsets.blueprint.BlueprintTools.md  index.md
skills/ue-official-mcp-5.8/: SKILL.md
skills/ue-official-mcp-5.8.0/: SKILL.md  index.md
skills/ue-official-mcp-5.8.0/references/: gas.md  material.md  mesh-geometry.md  project-misc.md
skills/ue-official-mcp-5.8.0/references/toolsets/: DataRegistryToolset.DataRegistryTools.md  EditorToolset.EditorAppToolset.md  PhysicsToolsets.PhysicsAssetToolset.md  PluginToolset.PluginToolset.md  SlateInspectorToolset.SlateInspectorToolset.md  ToolsetRegistry.AgentSkillToolset.md  WorldConditionsToolset.WorldConditionTools.md  aimodule_toolset.toolsets.behavior_tree.BehaviorTreeTools.md  animation_toolset.toolsets.conditions.SequencerConditionTools.md  animation_toolset.toolsets.outliner.SequencerOutlinerTools.md  editor_toolset.toolsets.data_table.DataTableTools.md  editor_toolset.toolsets.material.MaterialTools.md  (+6 more)
skills/ue-official-mcp-5.8/references/: animation-sequencer.md  blueprint.md  data-tables.md  editor-automation.md  index.md  niagara.md  scene-actor.md  ui-state.md  uncategorized.md
(+35 files in other folders)
